--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,23 @@ dependencies:
   flutter:
     sdk: flutter
 
-  animated_text_kit: ^4.2.2
+  easy_localization: ^3.0.7
+
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  very_good_analysis: ^7.0.0
+  go_router_builder: ^2.7.1
+  build_runner: ^2.4.14
 
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
 
   # fonts:
   #   - family: Schyler
