--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
     sdk: flutter
 
   easy_localization: ^3.0.7
-
+  provider: ^6.1.2
   go_router: ^14.6.2
+  flutter_portal: ^1.1.4
 
 dev_dependencies:
   flutter_test:
