--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.2
   go_router: ^14.6.2
   flutter_portal: ^1.1.4
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
