--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,18 @@ flutter:
 
   assets:
     - assets/translations/
+    - assets/fonts/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Nohemi
+      fonts:
+        - asset: assets/fonts/Nohemi-Thin.otf
+          weight: 100
+        - asset: assets/fonts/Nohemi-Light.otf
+          weight: 300
+        - asset: assets/fonts/Nohemi-Regular.otf
+          weight: 400
+        - asset: assets/fonts/Nohemi-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Nohemi-Bold.otf
+          weight: 700
