--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   easy_localization: ^3.0.7
   provider: ^6.1.2
   go_router: ^14.6.2
+
+  url_launcher: ^6.3.1
+
   #Animations
   flutter_portal: ^1.1.4
   animations: ^2.0.11
